make-a-wish-salesforce/src/objects/npe01__OppPayment__c.object
<CustomObject>
    <fields>
        <fullName>npe01__Check_Reference_Number__c</fullName>
        <label>Check/Reference Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npe01__Custom_Payment_Field__c</fullName>
        <label>Custom Payment Field</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npe01__Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>OppPayment</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>npe01__Paid__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Paid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npe01__Payment_Amount__c</fullName>
        <label>Payment Amount</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npe01__Payment_Date__c</fullName>
        <label>Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>npe01__Payment_Method__c</fullName>
        <label>Payment Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cash</fullName>
                </value>
                <value>
                    <fullName>Check</fullName>
                </value>
                <value>
                    <fullName>Credit Card</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>npe01__Scheduled_Date__c</fullName>
        <label>Scheduled Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>npe01__Written_Off__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Written Off</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npsp__Payment_Acknowledged_Date__c</fullName>
        <description>Used to track date opportunity was acknowledged</description>
        <inlineHelpText>Date of acknowledgment</inlineHelpText>
        <label>Payment Acknowledged Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>npsp__Payment_Acknowledgment_Status__c</fullName>
        <description>Status of Acknowledgment of this payment.</description>
        <inlineHelpText>Status of Acknowledgment of this payment.</inlineHelpText>
        <label>Payment Acknowledgment Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>To Be Acknowledged</fullName>
                </value>
                <value>
                    <fullName>Acknowledged</fullName>
                </value>
                <value>
                    <fullName>Do Not Acknowledge</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Payment</label>
    <nameField>
        <displayFormat>PMT-{00000}</displayFormat>
        <label>Payment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>